--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 28
@@ -32,19 +33,20 @@ dependencies {
     //RxJava
     implementation "io.reactivex.rxjava2:rxjava:2.2.0"
     //RxJavaAdapter
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     //RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     //GsonConverter
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     //Maps
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-places:16.1.0'
     //Locations
     implementation 'com.google.android.gms:play-services-location:16.0.0'
-    //places
-    implementation 'com.google.android.libraries.places:places:1.1.0'
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
