--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".database.RealmApp"
+        android:name=".shared.data.local.RealmApp"
         android:allowBackup="true"
         android:icon="@drawable/sun"
         android:label="Bee Forecast"
@@ -33,10 +33,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/api_key_places"/>
 
-        <activity android:name=".activity.SettingsActivity">
+        <activity android:name=".view.activity.settingsActivity.SettingsActivity">
 
         </activity>
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".view.activity.mainActivity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
